[project]
name = "finalProjectCS50"
version = "0.1.0"
description = "This is my final project for the CS50x"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.2",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "plotly>=6.1.2",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "streamlit>=1.45.1",
    "xgboost>=3.0.2",
    "yfinance>=0.2.61",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]
